--- a/app/views/admin/analytics/bookings.html.erb
+++ b/app/views/admin/analytics/bookings.html.erb
@@ -1,3 +1,9 @@
+<!-- di <head> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- sebelum </body> -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <!-- Include date adapter for Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
@@ -60,33 +66,50 @@
   </thead>
   <tbody>
     <% @total_booking.keys.sort.each do |date| %>
+      <% dom_id = date.strftime("%Y%m%d") %>
       <tr>
         <td><%= date.strftime("%d-%m-%Y") %></td>
+        
+        <!-- Total Booking -->
         <td><%= @total_booking[date] || 0 %></td>
         
-        <!-- Breakdown CS -->
+        <!-- Customer Service -->
         <td>
+          <% total_cs = @booking_cs[date] || 0 %>
+          <%= total_cs %>
           <% if @cs_breakdown[date].any? %>
-            <ul class="ps-3 mb-0">
-            <% @cs_breakdown[date].each do |name, cnt| %>
-              <li><strong><%= name %></strong>: <%= cnt %></li>
-            <% end %>
-            </ul>
-          <% else %>
-            0
+            <!-- toggle link -->
+            <a class="ms-2" data-bs-toggle="collapse" href="#cs-<%= dom_id %>" role="button"
+               aria-expanded="false" aria-controls="cs-<%= dom_id %>">
+              Detail
+            </a>
+            <!-- hidden breakdown -->
+            <div class="collapse mt-1" id="cs-<%= dom_id %>">
+              <ul class="ps-3 mb-0">
+                <% @cs_breakdown[date].each do |name, cnt| %>
+                  <li><strong><%= name %></strong>: <%= cnt %></li>
+                <% end %>
+              </ul>
+            </div>
           <% end %>
         </td>
-
-        <!-- Breakdown Staff Cabang -->
+        
+        <!-- Staff Cabang -->
         <td>
+          <% total_staff = @booking_staff[date] || 0 %>
+          <%= total_staff %>
           <% if @staff_breakdown[date].any? %>
-            <ul class="ps-3 mb-0">
-            <% @staff_breakdown[date].each do |name, cnt| %>
-              <li><strong><%= name %></strong>: <%= cnt %></li>
-            <% end %>
-            </ul>
-          <% else %>
-            0
+            <a class="ms-2" data-bs-toggle="collapse" href="#st-<%= dom_id %>" role="button"
+               aria-expanded="false" aria-controls="st-<%= dom_id %>">
+              Detail
+            </a>
+            <div class="collapse mt-1" id="st-<%= dom_id %>">
+              <ul class="ps-3 mb-0">
+                <% @staff_breakdown[date].each do |name, cnt| %>
+                  <li><strong><%= name %></strong>: <%= cnt %></li>
+                <% end %>
+              </ul>
+            </div>
           <% end %>
         </td>
       </tr>
