--- a/app/views/staff/bookings/_form.html.erb
+++ b/app/views/staff/bookings/_form.html.erb
@@ -43,6 +43,12 @@
     <%= f.label :customer_phone, "Telepon Customer", class: "form-label" %>
     <%= f.text_field :customer_phone, class: "form-control" %>
   </div>
+
+  <div class="mb-3">
+    <%= f.label :service_id, "Jenis Layanan", class: "form-label" %>
+    <%= f.collection_select :service_id, Service.all, :id, :name,
+          { prompt: "Pilih Layanan" }, { class: "form-select" } %>
+  </div>
   
   <div class="d-grid">
     <%= f.submit "Simpan Booking", class: "btn btn-primary" %>
