--- a/app/views/staff/bookings/_reschedule_form.html.erb
+++ b/app/views/staff/bookings/_reschedule_form.html.erb
@@ -56,6 +56,12 @@
   </div>
 
   <div class="mb-3">
+    <%= f.label :service_id, "Jenis Layanan", class: "form-label" %>
+    <%= f.collection_select :service_id, Service.all, :id, :name,
+          { prompt: "Pilih Layanan" }, { class: "form-select" } %>
+  </div>
+  
+  <div class="mb-3">
     <%= f.label :keterangan, "Keterangan", class: "form-label" %>
     <%= f.text_field :keterangan, class: "form-control", value: @booking.keterangan %>
   </div>
