--- a/app/views/bookings/register_outside.html.erb
+++ b/app/views/bookings/register_outside.html.erb
@@ -6,18 +6,18 @@
     <%= select_tag :branch_id,
           options_from_collection_for_select(@branches, :id, :name, params[:branch_id]),
           prompt: 'Pilih Cabang',
-          class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500' %>
+          class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:warna-utama' %>
   </div>
 
   <div>
     <%= label_tag :date, 'Tanggal', class: 'block text-gray-700 font-medium mb-1' %>
     <%= date_field_tag :date,
                      params[:date],
-                     class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500' %>
+                     class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:warna-utama' %>
   </div>
 
   <div>
-    <%= submit_tag 'Filter Jadwal', class: 'w-full py-2 bg-indigo-600 text-white font-semibold rounded-lg hover:bg-indigo-700 transition' %>
+    <%= submit_tag 'Filter Jadwal', class: 'w-full py-2 text-white font-semibold rounded-lg hover:bg-indigo-700 transition', style:'background-color: rgb(0,168,89)' %>
   </div>
 <% end %>
 
@@ -32,7 +32,7 @@
 
     <div>
       <%= f.label :slot_combined, 'Pilih Slot', class: 'block text-gray-700 font-medium mb-1' %>
-      <select name="booking[slot_combined]" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500">
+      <select name="booking[slot_combined]" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:warna-utama">
         <option value="">Pilih Slot</option>
         <% @available_slots.each do |slot| %>
           <% schedule = slot[:schedule] %>
@@ -47,13 +47,13 @@
     <div>
       <%= f.label :customer_name, 'Nama', class: 'block text-gray-700 font-medium mb-1' %>
       <%= f.text_field :customer_name,
-                       class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500' %>
+                       class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:warna-utama' %>
     </div>
 
     <div>
       <%= f.label :customer_phone, 'Nomor Whatsapp', class: 'block text-gray-700 font-medium mb-1' %>
       <%= f.text_field :customer_phone,
-                       class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500' %>
+                       class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:warna-utama' %>
     </div>
 
     <div class="mb-3">
@@ -65,7 +65,7 @@
     <div>
       <%= f.label :keterangan, 'Keterangan', class: 'block text-gray-700 font-medium mb-1' %>
       <%= f.text_field :keterangan,
-                       class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500' %>
+                       class: 'w-full px-4 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:warna-utama' %>
     </div>
 
     <div>
@@ -73,3 +73,10 @@
     </div>
   <% end %>
 <% end %>
+<style>
+  .warna-utama {
+    background-color: rgba(240,124,0,1);
+    border-color: rgba(240,124,0,1);
+  }
+
+</style>
