--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -11,6 +11,23 @@
       </ul>
     </div>
   <% end %>
+  <div class="row">
+    <div class="col-md-6 mb-3">
+      <hr>
+      <div class="row mb-3 align-items-center">
+        <div class="col-md-8">
+          <h5>Bagikan Link Pasien baru</h5>
+        </div>
+        <div class="col-md-4 text-center">
+          <%# Memanggil helper untuk merender QR code %>
+          <%= render_qr_code(params[:booking]) %>
+        </div>
+      </div>
+    <hr>
+    </div>
+  </div>
+  
+
 
   <div class="row">
     <div class="col-md-6 mb-3">
