--- a/app/views/layouts/internal_form.html.erb
+++ b/app/views/layouts/internal_form.html.erb
@@ -26,104 +26,7 @@
       </div>
     <% end %>
 
-    <div class="row">
-    <div class="col-md-6 mb-3">
-      <hr>
-      <div class="row mb-3 align-items-center">
-        <div class="col-md-8">
-          <h5>Bagikan Link Pasien baru</h5>
-        </div>
-        <div class="col-md-4 text-center">
-          <%# Memanggil helper untuk merender QR code %>
-          <%= render_qr_code(params[:booking]) %>
-        </div>
-      </div>
-    <hr>
-    </div>
-  </div>
-
-    <%= form_with(model: @patient, local: true, html: { class: 'space-y-4' }) do |f| %>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <div>
-          <%= f.label :full_name, "Nama Lengkap", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :full_name, required: true, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2", value: @booking.customer_name %>
-        </div>
-
-        <div>
-          <%= f.label :identity_number, "No. KTP / SIM / Passport", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :identity_number, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :gender, "Jenis Kelamin", class: "block font-medium text-gray-700" %>
-          <%= f.select :gender, ['Laki-Laki', 'Perempuan'], {}, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :place_of_birth, "Tempat Lahir", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :place_of_birth, required: true, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :date_of_birth, "Tanggal Lahir", class: "block font-medium text-gray-700" %>
-          <%= f.date_field :date_of_birth, required: true, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :phone_number, "No. Telp Pribadi", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :phone_number, required: true, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2", value: @booking.customer_phone %>
-        </div>
-
-        <div>
-          <%= f.label :email, "Email", class: "block font-medium text-gray-700" %>
-          <%= f.email_field :email, required: true, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div class="md:col-span-2">
-          <%= f.label :address, "Alamat (sesuai identitas)", class: "block font-medium text-gray-700" %>
-          <%= f.text_area :address, required: true, rows: 3, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :subdistrict, "Kelurahan", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :subdistrict, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :district, "Kecamatan", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :district, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :city, "Kabupaten/Kota", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :city, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :province, "Provinsi", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :province, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :blood_type, "Golongan Darah", class: "block font-medium text-gray-700" %>
-          <%= f.select :blood_type, ['A', 'B', 'AB', 'O'], {}, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div>
-          <%= f.label :emergency_contact_name, "Nama Kontak Darurat", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :emergency_contact_name, required: true, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-
-        <div class="md:col-span-2">
-          <%= f.label :emergency_contact_phone, "No. Telp Kontak Darurat", class: "block font-medium text-gray-700" %>
-          <%= f.text_field :emergency_contact_phone, required: true, class: "mt-1 block w-full border border-gray-300 rounded-lg p-2" %>
-        </div>
-      </div>
-
-      <div class="flex justify-center mt-6">
-        <%= f.submit "Simpan", class: "bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-6 rounded-full shadow-md transition duration-300" %>
-      </div>
-    <% end %>
+    <%= yield %>
 
   </main>
 </body>
