--- a/app/views/layouts/internal_form.html.erb
+++ b/app/views/layouts/internal_form.html.erb
@@ -7,13 +7,20 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+
+    .bg-orange-500{
+      background-color: #FF6F3C;
+    }
+
+  </style>
 </head>
 <body class="flex items-center justify-center min-h-screen p-4" style="background-color: rgba(255,234,219,1);">
   <main class="w-full max-w-3xl bg-white rounded-3xl shadow-2xl p-8">
 
     <!-- Logo -->
     <div class="flex justify-center mb-4">
-      <img src="https://00b0e33c.rocketcdn.me/wp-content/uploads/2023/07/Logo-Orange-Dental-Landscape-Flat-High-Res-12.png" alt="Logo Orange Dental" class="h-12 md:h-16 object-contain">
+      <img src="https://orangedentalhouse.com/wp-content/uploads/2025/08/Logo-Orange-Landscape.png" alt="Logo Orange Dental" class="h-12 md:h-16 object-contain">
     </div>
 
     <h1 class="text-3xl font-extrabold text-center text-orange-600 mb-6">Form Pendaftaran Pasien</h1>
