--- a/app/views/patients/booking_code.html.erb
+++ b/app/views/patients/booking_code.html.erb
@@ -21,6 +21,6 @@
   </div>
 
   <div>
-    <%= form.submit "Cari Data Pasien", class: "w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-orange-600 hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500 cursor-pointer" %>
+    <%= form.submit "Cari Data Pasien", class: "bg-orange-500 w-full flex justify-center py-3 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-orange-600 hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-orange-500 cursor-pointer" %>
   </div>
 <% end %>
