--- a/app/views/staff/bookings/today.html.erb
+++ b/app/views/staff/bookings/today.html.erb
@@ -3,6 +3,7 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th>ID Appointment</th>
       <th>Waktu Slot</th>
       <th>Dokter</th>
       <th>Customer</th>
@@ -13,6 +14,7 @@
   <tbody>
     <% @bookings.each do |booking| %>
       <tr>
+        <td><%= booking.id %></td>
         <td>
           <% if booking.booking_time.present? %>
             <%= booking.booking_time.strftime("%H:%M") %>
