layanan wajib ada

--- a/app/views/bookings/new_cs.html.erb
+++ b/app/views/bookings/new_cs.html.erb
@@ -74,7 +74,7 @@
     <div class="mb-3">
       <%= f.label :service_id, "Jenis Layanan", class: "form-label" %>
       <%= f.collection_select :service_id, Service.all, :id, :name,
-            { prompt: "Pilih Layanan" }, { class: "form-select" } %>
+            { prompt: "Pilih Layanan" }, { class: "form-select", required: true } %>
     </div>
 
     <div class="d-grid">
