--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -98,6 +98,6 @@
       </div>
 
       <div class="flex justify-center mt-6">
-        <%= f.submit "Simpan", class: "bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-6 rounded-full shadow-md transition duration-300" %>
+        <%= f.submit "Simpan", class: "bg-green-500 hover:bg-orange-600 text-white font-bold py-2 px-6 rounded-full shadow-md transition duration-300" %>
       </div>
     <% end %>
